--- a/public/index.html
+++ b/public/index.html
@@ -7,55 +7,89 @@
     <title>Web Programming 260</title>
     <style>
       * {
-        margin: 1em;
         box-sizing: border-box;
-        font-size: 35px;
         font-family: Arial, sans-serif;
+        margin: 0;
       }
-      html {
-        height: 100%;
-      }
-      body {
+      main {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100%;
+        height: 100vh;
+        font-size: 3vw;
+      }
+
+      .large {
+        display: block;
       }
 
       p {
-        width: 50%;
-        height: 50%;
+        font-size: 2em;
         display: flex;
         color: #666;
       }
 
-      p.name {
-        font-size: 50px;
+      .course {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .courseName {
+        margin: 0.25em;
+        font-size: 3em;
         font-weight: bold;
         color: #111;
       }
       .courseNum {
-        font-size: 40px;
+        margin: 0.25em;
+        font-size: 3em;
         color: #da9512;
-        font-weight: 100;
+      }
+
+      .small {
+        display: none;
+        font-size: 30vw;
+        color: #f3cf8c;
+      }
+
+      @media (max-width: 500px) {
+        body {
+          background-color: rgb(23, 23, 23);
+        }
+        .large {
+          display: none;
+        }
+        .small {
+          display: block;
+        }
       }
     </style>
   </head>
 
   <body>
-    <div>
-      <p>Welcome to your</p>
-      <p class="name">Web Programming <span class="courseNum">260</span></p>
-      <p id="serviceName">website</p>
-    </div>
+    <main>
+      <div class="large">
+        <p>Welcome to your</p>
+        <div class="course">
+          <div class="courseName">Web<br />Programming</div>
+          <div class="courseNum">260</div>
+        </div>
+        <p id="serviceName">website</p>
+      </div>
+      <div class="small">260</div>
+    </main>
 
     <script>
-      fetch('/config')
-        .then((r) => r.json())
-        .then((config) => {
-          const serviceNameEl = document.querySelector('#serviceName');
-          serviceNameEl.textContent = config.name;
-        });
+      fetch('/config').then((r) => {
+        if (r.ok) {
+          r.json().then((config) => {
+            const serviceNameEl = document.querySelector('#serviceName');
+            serviceNameEl.textContent = config.name;
+          });
+        }
+      });
     </script>
   </body>
 </html>
