add(css) animation

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         justify-content: center;
         height: 100vh;
         font-size: 3vw;
+        animation: fly-in 1s ease-out;
       }
 
       .large {
@@ -52,6 +53,18 @@
         display: none;
         font-size: 30vw;
         color: #f3cf8c;
+      }
+
+      @keyframes fly-in {
+        0% {
+          transform: translateX(-200%);
+        }
+        80% {
+          transform: translateX(1%);
+        }
+        100% {
+          transform: translateX(0%);
+        }
       }
 
       @media (max-width: 500px) {
